[package]
name = "meta-real-platform-cloud-uxm"
version = "0.1.0"
edition = "2021"
description = "Event-driven architecture for modern applications"
license = "MIT"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
